--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 node_modules
 /dist
 
-
 # local env files
 .env.local
 .env.*.local
@@ -21,3 +20,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+node_modules
